--- a/site/project.html
+++ b/site/project.html
@@ -4,6 +4,6 @@
 	<title>Hello World</title>
 </head>
 <body>
-<h1>Coursera project</h1>
+<h1>Coursera project. Its my first cousrse</h1>
 </body>
 </html>
